data/derived/comb/progs/unify/prog4613.ml.out
Characters 88-90:
  | Sine e-> build(pi*e);;
                   ^^
Error: This expression has type float but an expression was expected of type
         int
